refactored project structure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 jsondoc.version=1.0
 jsondoc.basePath=http://localhost:8080
 jsondoc.packages[0]=ua.nure.riznyk.diploma.rest
+jsondoc.packages[1]=ua.nure.riznyk.diploma.run
 #jsondoc.packages[1]=com.example.model
 # optional configuration
 jsondoc.playgroundEnabled=true
