--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,10 @@
       <version>1.2.19</version>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.jsondoc</groupId>
       <artifactId>jsondoc-ui-webjar</artifactId>
       <version>1.2.19</version>
