--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,16 @@
 
   </dependencies>
   <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
     <finalName>ua.nure.riznyk.diploms</finalName>
   </build>
 </project>
