--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/MySqlOptimizer
+spring.datasource.username=root
+spring.datasource.password=5267d45c6
+
+
 jsondoc.version=1.0
 jsondoc.basePath=http://localhost:8080
 jsondoc.packages[0]=ua.nure.riznyk.diploma.rest
